plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'com.google.cloud.tools.jib' version '3.4.0'
}

group = 'com.chatty'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//base
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.400'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'


	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


	// related to the database
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	//rabbitmq
	implementation 'org.springframework.boot:spring-boot-starter-amqp'

	// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'

	//lombok
	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'
	testCompileOnly 'org.projectlombok:lombok:1.18.34'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

	// only for test
	testRuntimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// dto validation... it should be included
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// jwt token
	implementation 'com.auth0:java-jwt:4.0.0'

	//DatabaseCleanUp
	implementation group: 'com.google.guava', name: 'guava', version: '12.0'
	//stomp
	implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'

}

tasks.named('test') {
	useJUnitPlatform()
}


bootJar {
	archiveFileName = 'app.jar'
}